为ExampleServer添加支持DTLS的特性

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<version>3.8.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>tools</artifactId>
+	<artifactId>californium-tools</artifactId>
 	<packaging>pom</packaging>
 
 	<name>Californium (Cf) Tools</name>
