为ExampleServer添加支持DTLS的特性

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<groupId>org.eclipse.californium</groupId>
 		<artifactId>cf-bom</artifactId>
 		<version>3.9.0-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 
 	<artifactId>californium-tools</artifactId>
