--- a/cf-browser/pom.xml
+++ b/cf-browser/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.eclipse.californium</groupId>
 		<artifactId>tools</artifactId>
 		<version>3.9.0-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 	<artifactId>cf-browser</artifactId>
 	<packaging>jar</packaging>
