--- a/cf-client/pom.xml
+++ b/cf-client/pom.xml
@@ -9,6 +9,7 @@
 		<groupId>org.eclipse.californium</groupId>
 		<artifactId>tools</artifactId>
 		<version>3.9.0-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 	<artifactId>cf-client</artifactId>
 	<packaging>jar</packaging>
