--- a/cf-jmeter-plugin/pom.xml
+++ b/cf-jmeter-plugin/pom.xml
@@ -10,6 +10,7 @@
 		<groupId>org.eclipse.californium</groupId>
 		<artifactId>tools</artifactId>
 		<version>3.9.0-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 	<artifactId>cf-jmeter-plugin</artifactId>
 	<packaging>jar</packaging>
